--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "postinstall": "npm run build",
-    "start": "node server.js",
-    "install:clean": "rm -rf node_modules/ && rm -rf package-lock.json && npm install && npm run dev"
+    "start": "node server.js"
   },
   "dependencies": {
     "core-js": "^3.6.5",
